--- a/src/css/jquery-ui-areaselector.css
+++ b/src/css/jquery-ui-areaselector.css
@@ -13,20 +13,39 @@
 .ui-areaselector-overlay.ui-areaselector-hidemask .ui-areaselector-mask {
 	visibility: hidden;
 }
+.ui-areaselector-overlay .ui-resizable {
+	position: relative;
+}
+.ui-areaselector-overlay .ui-resizable-handle {
+	position: absolute;
+	font-size: 0.1px;
+	display: block;
+}
+.ui-areaselector-overlay .ui-resizable-handle, .ui-areaselector-overlay .ui-draggable-handle {
+	-ms-touch-action: none;
+	touch-action: none;
+}
+.ui-areaselector-overlay .ui-resizable-disabled .ui-resizable-handle {
+	display:none;
+}
 .ui-areaselector-overlay .ui-resizable-handle-anchor {
 	width:7px;
 	height:7px;
 	background-color:#AAA;
 }
-.ui-areaselector-overlay .ui-resizable-handle.ui-resizable-e, .ui-areaselector .ui-resizable-handle.ui-resizable-w {
-	top: 7px;
+.ui-areaselector-overlay .ui-resizable-handle.ui-resizable-e, .ui-areaselector-overlay .ui-resizable-handle.ui-resizable-w {
+	top: 0px;
 	width: 7px;
+	height: 100%;
 	height: calc(100% - 14px);
+	top: calc(7px);
 }
-.ui-areaselector-overlay .ui-resizable-handle.ui-resizable-n, .ui-areaselector .ui-resizable-handle.ui-resizable-s {
-	left: 7px;
-	width: calc(100% - 14px);
+.ui-areaselector-overlay .ui-resizable-handle.ui-resizable-n, .ui-areaselector-overlay .ui-resizable-handle.ui-resizable-s {
+	left: 0px;
+	width:100%;
 	height: 7px;
+	width: calc(100% - 14px);
+	left: calc(7px);
 }
 .ui-areaselector-overlay .ui-resizable-handle.ui-resizable-n > .ui-resizable-handle-anchor {
 	position:absolute;
